[gd_scene load_steps=13 format=3 uid="uid://bn5kls8sevbfc"]

[ext_resource type="Script" uid="uid://dr5xla5wo4qwi" path="res://Escenas/Personajes/eminen.gd" id="1_anldl"]
[ext_resource type="Texture2D" uid="uid://yxukfjxbm1b6" path="res://Assets/Personajes/eminen.png" id="1_flaff"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anldl"]
size = Vector2(65, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqjoh"]
size = Vector2(158, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qep2"]
size = Vector2(230, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cg7l4"]
size = Vector2(51, 121)

[sub_resource type="Animation" id="Animation_cg7l4"]
resource_name = "Death"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="Animation" id="Animation_flaff"]
resource_name = "Idle"
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_5qep2"]
resource_name = "Punch"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_anldl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b7h7v"]
resource_name = "Walk"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 7, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cg7l4"]
_data = {
&"Death": SubResource("Animation_cg7l4"),
&"Idle": SubResource("Animation_flaff"),
&"Punch": SubResource("Animation_5qep2"),
&"RESET": SubResource("Animation_anldl"),
&"Walk": SubResource("Animation_b7h7v")
}

[node name="Eminen" type="CharacterBody2D" groups=["Enemigos"]]
physics_interpolation_mode = 1
y_sort_enabled = true
collision_layer = 4
collision_mask = 3
script = ExtResource("1_anldl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_flaff")
hframes = 3
vframes = 4

[node name="HurtBox" type="Area2D" parent="Sprite2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
position = Vector2(2.5, -15)
shape = SubResource("RectangleShape2D_anldl")
debug_color = Color(0.771103, 0.374125, 0.626121, 0.42)

[node name="HitBox" type="Area2D" parent="Sprite2D" groups=["Enemigos"]]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HitBox"]
position = Vector2(-36, -31)
shape = SubResource("RectangleShape2D_xqjoh")
disabled = true
debug_color = Color(0.991356, 0, 0.266632, 0.42)

[node name="AttackBox" type="Area2D" parent="Sprite2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackBox"]
shape = SubResource("RectangleShape2D_5qep2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 5.5)
shape = SubResource("RectangleShape2D_cg7l4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cg7l4")
}
autoplay = "Idle"

[connection signal="area_entered" from="Sprite2D/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="Sprite2D/AttackBox" to="." method="_on_attack_box_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
